Analizador/Pruebas 4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    BREAK
    CAPACITY
    CD
    CI
    CONTAINS
    CONTINUE
    ERR
    FOR
    IN
    INSERT
    LEN
    LOOP
    MOD
    NEW
    PUSH
    REMOVE
    STRUCT
    VECT
    WCAPACITY

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> funcion
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> asignacion
Rule 7     lista_bloque -> lista_bloque bloque
Rule 8     lista_bloque -> bloque
Rule 9     bloque -> impresiones PYC
Rule 10    bloque -> declaracion
Rule 11    bloque -> asignacion PYC
Rule 12    bloque -> llamada PYC
Rule 13    bloque -> start_match
Rule 14    bloque -> start_if
Rule 15    bloque -> start_while
Rule 16    bloque -> return_ins PYC
Rule 17    bloque_match -> impresiones
Rule 18    bloque_match -> asignacion
Rule 19    bloque_match -> llamada
Rule 20    bloque_match -> start_match
Rule 21    bloque_match -> start_if
Rule 22    bloque_match -> start_while
Rule 23    return_ins -> RETURN
Rule 24    return_ins -> RETURN expresiones
Rule 25    start_while -> WHILE expresiones LI lista_bloque LD
Rule 26    list_exp_ins -> list_exp_ins bloque_exp
Rule 27    list_exp_ins -> bloque_exp
Rule 28    start_if -> IF expresiones LI list_exp_ins LD
Rule 29    start_if -> IF expresiones LI list_exp_ins LD ELSE LI list_exp_ins LD
Rule 30    start_if -> IF expresiones LI list_exp_ins LD lista_elif
Rule 31    start_if -> IF expresiones LI list_exp_ins LD lista_elif ELSE LI list_exp_ins LD
Rule 32    lista_elif -> lista_elif else_if
Rule 33    lista_elif -> else_if
Rule 34    else_if -> ELSE IF expresiones LI list_exp_ins LD
Rule 35    start_match -> MATCH expresiones LI matches LD
Rule 36    matches -> matches bloque_match
Rule 37    matches -> bloque_match
Rule 38    bloque_match -> varios_match IGUAL MAYOR simple_bloque_exp COMA
Rule 39    bloque_match -> varios_match IGUAL MAYOR LI list_exp_ins LD
Rule 40    simple_bloque_exp -> expresiones
Rule 41    simple_bloque_exp -> bloque_match
Rule 42    bloque_exp -> bloque
Rule 43    bloque_exp -> expresiones
Rule 44    varios_match -> varios_match BARRA expresiones
Rule 45    varios_match -> expresiones
Rule 46    varios_match -> GBAJO
Rule 47    llamada -> ID PI PD
Rule 48    llamada -> ID PI lista_expres PD
Rule 49    lista_expres -> lista_expres COMA expresiones
Rule 50    lista_expres -> expresiones
Rule 51    funcion -> FUNCION MAIN PI PD LI lista_bloque LD
Rule 52    funcion -> FUNCION ID PI PD tipo_funcion LI lista_bloque LD
Rule 53    funcion -> FUNCION ID PI parametros PD tipo_funcion LI lista_bloque LD
Rule 54    parametros -> parametros COMA definiciones
Rule 55    parametros -> definiciones
Rule 56    definiciones -> referencias mutable ID VECTOR tipado_vector
Rule 57    definiciones -> referencias mutable ID tipado
Rule 58    referencias -> REFER
Rule 59    referencias -> <empty>
Rule 60    tipado_vector -> <empty>
Rule 61    acceso -> PUBLICO
Rule 62    acceso -> <empty>
Rule 63    tipo_funcion -> RESTA MAYOR tipo_datos
Rule 64    tipo_funcion -> RESTA MAYOR VECTOR MENOR tipo_datos MAYOR
Rule 65    tipo_funcion -> <empty>
Rule 66    declaracion -> LET mutable ID tipado PYC
Rule 67    declaracion -> LET mutable ID tipado IGUAL expresiones PYC
Rule 68    asignacion -> ID IGUAL expresiones
Rule 69    mutable -> MUT
Rule 70    mutable -> <empty>
Rule 71    tipado -> DP tipo_datos
Rule 72    tipado -> <empty>
Rule 73    tipo_datos -> TIPOINT
Rule 74    tipo_datos -> TIPOFLOAT
Rule 75    tipo_datos -> TIPOCHAR
Rule 76    tipo_datos -> TIPOSTRING
Rule 77    tipo_datos -> DIRSTRING
Rule 78    tipo_datos -> TIPOBOOL
Rule 79    impresiones -> PRINTLN PI CADENA PD
Rule 80    impresiones -> PRINT PI CADENA PD
Rule 81    impresiones -> PRINTLN PI CADENA COMA impresion_valores PD
Rule 82    impresiones -> PRINT PI CADENA COMA impresion_valores PD
Rule 83    impresion_valores -> impresion_valores COMA expresiones
Rule 84    impresion_valores -> expresiones
Rule 85    expresiones -> funcion_nativa
Rule 86    expresiones -> expre_logica
Rule 87    expresiones -> expre_relacional
Rule 88    expresiones -> expre_aritmetica
Rule 89    expresiones -> expre_valor
Rule 90    expresiones -> <empty>
Rule 91    expre_valor -> datos_cast
Rule 92    expre_valor -> start_match
Rule 93    expre_valor -> start_if
Rule 94    expre_valor -> llamada
Rule 95    funcion_nativa -> expresiones PUNTO nativas
Rule 96    nativas -> ABS
Rule 97    nativas -> SQRT
Rule 98    nativas -> TOSTRING
Rule 99    nativas -> TOOWNED
Rule 100   nativas -> CLONE
Rule 101   expre_logica -> expresiones OR expresiones
Rule 102   expre_logica -> expresiones AND expresiones
Rule 103   expre_logica -> NOT expresiones
Rule 104   expre_relacional -> expresiones MAYORIGUAL expresiones
Rule 105   expre_relacional -> expresiones MAYOR expresiones
Rule 106   expre_relacional -> expresiones MENORIGUAL expresiones
Rule 107   expre_relacional -> expresiones MENOR expresiones
Rule 108   expre_relacional -> expresiones IGUALDAD expresiones
Rule 109   expre_relacional -> expresiones DESIGUALDAD expresiones
Rule 110   expre_aritmetica -> RESTA expresiones
Rule 111   expre_aritmetica -> PI expresiones PD
Rule 112   expre_aritmetica -> expresiones RESTA expresiones
Rule 113   expre_aritmetica -> expresiones SUMA expresiones
Rule 114   expre_aritmetica -> expresiones MULTI expresiones
Rule 115   expre_aritmetica -> expresiones DIVI expresiones
Rule 116   expre_aritmetica -> expresiones MODULO expresiones
Rule 117   expre_aritmetica -> POWF PI expresiones COMA expresiones PD
Rule 118   expre_aritmetica -> POW PI expresiones COMA expresiones PD
Rule 119   datos_cast -> datos
Rule 120   datos -> ENTERO
Rule 121   datos -> FLOAT
Rule 122   datos -> CADENA
Rule 123   datos -> CARACTER
Rule 124   datos -> ID
Rule 125   datos -> TRUE
Rule 126   datos -> FALSE

Terminals, with rules where they appear

ABS                  : 96
AND                  : 102
AS                   : 
BARRA                : 44
BREAK                : 
CADENA               : 79 80 81 82 122
CAPACITY             : 
CARACTER             : 123
CD                   : 
CI                   : 
CLONE                : 100
COMA                 : 38 49 54 81 82 83 117 118
CONTAINS             : 
CONTINUE             : 
DESIGUALDAD          : 109
DIRSTRING            : 77
DIVI                 : 115
DP                   : 71
ELSE                 : 29 31 34
ENTERO               : 120
ERR                  : 
FALSE                : 126
FLOAT                : 121
FOR                  : 
FUNCION              : 51 52 53
GBAJO                : 46
ID                   : 47 48 52 53 56 57 66 67 68 124
IF                   : 28 29 30 31 34
IGUAL                : 38 39 67 68
IGUALDAD             : 108
IN                   : 
INSERT               : 
LD                   : 25 28 29 29 30 31 31 34 35 39 51 52 53
LEN                  : 
LET                  : 66 67
LI                   : 25 28 29 29 30 31 31 34 35 39 51 52 53
LOOP                 : 
MAIN                 : 51
MATCH                : 35
MAYOR                : 38 39 63 64 64 105
MAYORIGUAL           : 104
MENOR                : 64 107
MENORIGUAL           : 106
MOD                  : 
MODULO               : 116
MULTI                : 114
MUT                  : 69
NEW                  : 
NOT                  : 103
OR                   : 101
PD                   : 47 48 51 52 53 79 80 81 82 111 117 118
PI                   : 47 48 51 52 53 79 80 81 82 111 117 118
POW                  : 118
POWF                 : 117
PRINT                : 80 82
PRINTLN              : 79 81
PUBLICO              : 61
PUNTO                : 95
PUSH                 : 
PYC                  : 9 11 12 16 66 67
REFER                : 58
REMOVE               : 
RESTA                : 63 64 110 112
RETURN               : 23 24
SQRT                 : 97
STRUCT               : 
SUMA                 : 113
TIPOBOOL             : 78
TIPOCHAR             : 75
TIPOFLOAT            : 74
TIPOINT              : 73
TIPOSTRING           : 76
TOOWNED              : 99
TOSTRING             : 98
TRUE                 : 125
VECT                 : 
VECTOR               : 56 64
WCAPACITY            : 
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

acceso               : 
asignacion           : 6 11 18
bloque               : 7 8 42
bloque_exp           : 26 27
bloque_match         : 36 37 41
datos                : 119
datos_cast           : 91
declaracion          : 5 10
definiciones         : 54 55
else_if              : 32 33
expre_aritmetica     : 88
expre_logica         : 86
expre_relacional     : 87
expre_valor          : 89
expresiones          : 24 25 28 29 30 31 34 35 40 43 44 45 49 50 67 68 83 84 95 101 101 102 102 103 104 104 105 105 106 106 107 107 108 108 109 109 110 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118
funcion              : 4
funcion_nativa       : 85
impresion_valores    : 81 82 83
impresiones          : 9 17
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
list_exp_ins         : 26 28 29 29 30 31 31 34 39
lista_bloque         : 7 25 51 52 53
lista_elif           : 30 31 32
lista_expres         : 48 49
llamada              : 12 19 94
matches              : 35 36
mutable              : 56 57 66 67
nativas              : 95
parametros           : 53 54
referencias          : 56 57
return_ins           : 16
simple_bloque_exp    : 38
start_if             : 14 21 93
start_match          : 13 20 92
start_while          : 15 22
tipado               : 57 66 67
tipado_vector        : 56
tipo_datos           : 63 64 71
tipo_funcion         : 52 53
varios_match         : 38 39 44

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . funcion
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (51) funcion -> . FUNCION MAIN PI PD LI lista_bloque LD
    (52) funcion -> . FUNCION ID PI PD tipo_funcion LI lista_bloque LD
    (53) funcion -> . FUNCION ID PI parametros PD tipo_funcion LI lista_bloque LD
    (66) declaracion -> . LET mutable ID tipado PYC
    (67) declaracion -> . LET mutable ID tipado IGUAL expresiones PYC
    (68) asignacion -> . ID IGUAL expresiones

    FUNCION         shift and go to state 7
    LET             shift and go to state 9
    ID              shift and go to state 8

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    funcion                        shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . funcion
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (51) funcion -> . FUNCION MAIN PI PD LI lista_bloque LD
    (52) funcion -> . FUNCION ID PI PD tipo_funcion LI lista_bloque LD
    (53) funcion -> . FUNCION ID PI parametros PD tipo_funcion LI lista_bloque LD
    (66) declaracion -> . LET mutable ID tipado PYC
    (67) declaracion -> . LET mutable ID tipado IGUAL expresiones PYC
    (68) asignacion -> . ID IGUAL expresiones

    $end            reduce using rule 1 (init -> instrucciones .)
    FUNCION         shift and go to state 7
    LET             shift and go to state 9
    ID              shift and go to state 8

    instruccion                    shift and go to state 10
    funcion                        shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    FUNCION         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> funcion .

    FUNCION         reduce using rule 4 (instruccion -> funcion .)
    LET             reduce using rule 4 (instruccion -> funcion .)
    ID              reduce using rule 4 (instruccion -> funcion .)
    $end            reduce using rule 4 (instruccion -> funcion .)


state 5

    (5) instruccion -> declaracion .

    FUNCION         reduce using rule 5 (instruccion -> declaracion .)
    LET             reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> asignacion .

    FUNCION         reduce using rule 6 (instruccion -> asignacion .)
    LET             reduce using rule 6 (instruccion -> asignacion .)
    ID              reduce using rule 6 (instruccion -> asignacion .)
    $end            reduce using rule 6 (instruccion -> asignacion .)


state 7

    (51) funcion -> FUNCION . MAIN PI PD LI lista_bloque LD
    (52) funcion -> FUNCION . ID PI PD tipo_funcion LI lista_bloque LD
    (53) funcion -> FUNCION . ID PI parametros PD tipo_funcion LI lista_bloque LD

    MAIN            shift and go to state 11
    ID              shift and go to state 12


state 8

    (68) asignacion -> ID . IGUAL expresiones

    IGUAL           shift and go to state 13


state 9

    (66) declaracion -> LET . mutable ID tipado PYC
    (67) declaracion -> LET . mutable ID tipado IGUAL expresiones PYC
    (69) mutable -> . MUT
    (70) mutable -> .

    MUT             shift and go to state 15
    ID              reduce using rule 70 (mutable -> .)

    mutable                        shift and go to state 14

state 10

    (2) instrucciones -> instrucciones instruccion .

    FUNCION         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 11

    (51) funcion -> FUNCION MAIN . PI PD LI lista_bloque LD

    PI              shift and go to state 16


state 12

    (52) funcion -> FUNCION ID . PI PD tipo_funcion LI lista_bloque LD
    (53) funcion -> FUNCION ID . PI parametros PD tipo_funcion LI lista_bloque LD

    PI              shift and go to state 17


state 13

    (68) asignacion -> ID IGUAL . expresiones
    (85) expresiones -> . funcion_nativa
    (86) expresiones -> . expre_logica
    (87) expresiones -> . expre_relacional
    (88) expresiones -> . expre_aritmetica
    (89) expresiones -> . expre_valor
    (90) expresiones -> .
    (95) funcion_nativa -> . expresiones PUNTO nativas
    (101) expre_logica -> . expresiones OR expresiones
    (102) expre_logica -> . expresiones AND expresiones
    (103) expre_logica -> . NOT expresiones
    (104) expre_relacional -> . expresiones MAYORIGUAL expresiones
    (105) expre_relacional -> . expresiones MAYOR expresiones
    (106) expre_relacional -> . expresiones MENORIGUAL expresiones
    (107) expre_relacional -> . expresiones MENOR expresiones
    (108) expre_relacional -> . expresiones IGUALDAD expresiones
    (109) expre_relacional -> . expresiones DESIGUALDAD expresiones
    (110) expre_aritmetica -> . RESTA expresiones
    (111) expre_aritmetica -> . PI expresiones PD
    (112) expre_aritmetica -> . expresiones RESTA expresiones
    (113) expre_aritmetica -> . expresiones SUMA expresiones
    (114) expre_aritmetica -> . expresiones MULTI expresiones
    (115) expre_aritmetica -> . expresiones DIVI expresiones
    (116) expre_aritmetica -> . expresiones MODULO expresiones
    (117) expre_aritmetica -> . POWF PI expresiones COMA expresiones PD
    (118) expre_aritmetica -> . POW PI expresiones COMA expresiones PD
    (91) expre_valor -> . datos_cast
    (92) expre_valor -> . start_match
    (93) expre_valor -> . start_if
    (94) expre_valor -> . llamada
    (119) datos_cast -> . datos
    (35) start_match -> . MATCH expresiones LI matches LD
    (28) start_if -> . IF expresiones LI list_exp_ins LD
    (29) start_if -> . IF expresiones LI list_exp_ins LD ELSE LI list_exp_ins LD
    (30) start_if -> . IF expresiones LI list_exp_ins LD lista_elif
    (31) start_if -> . IF expresiones LI list_exp_ins LD lista_elif ELSE LI list_exp_ins LD
    (47) llamada -> . ID PI PD
    (48) llamada -> . ID PI lista_expres PD
    (120) datos -> . ENTERO
    (121) datos -> . FLOAT
    (122) datos -> . CADENA
    (123) datos -> . CARACTER
    (124) datos -> . ID
    (125) datos -> . TRUE
    (126) datos -> . FALSE

  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for PI resolved as shift
  ! shift/reduce conflict for POWF resolved as shift
  ! shift/reduce conflict for POW resolved as shift
  ! shift/reduce conflict for MATCH resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for CARACTER resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    PUNTO           reduce using rule 90 (expresiones -> .)
    OR              reduce using rule 90 (expresiones -> .)
    AND             reduce using rule 90 (expresiones -> .)
    MAYORIGUAL      reduce using rule 90 (expresiones -> .)
    MAYOR           reduce using rule 90 (expresiones -> .)
    MENORIGUAL      reduce using rule 90 (expresiones -> .)
    MENOR           reduce using rule 90 (expresiones -> .)
    IGUALDAD        reduce using rule 90 (expresiones -> .)
    DESIGUALDAD     reduce using rule 90 (expresiones -> .)
    SUMA            reduce using rule 90 (expresiones -> .)
    MULTI           reduce using rule 90 (expresiones -> .)
    DIVI            reduce using rule 90 (expresiones -> .)
    MODULO          reduce using rule 90 (expresiones -> .)
    FUNCION         reduce using rule 90 (expresiones -> .)
    LET             reduce using rule 90 (expresiones -> .)
    $end            reduce using rule 90 (expresiones -> .)
    PYC             reduce using rule 90 (expresiones -> .)
    LD              reduce using rule 90 (expresiones -> .)
    PRINTLN         reduce using rule 90 (expresiones -> .)
    PRINT           reduce using rule 90 (expresiones -> .)
    WHILE           reduce using rule 90 (expresiones -> .)
    GBAJO           reduce using rule 90 (expresiones -> .)
    IGUAL           reduce using rule 90 (expresiones -> .)
    BARRA           reduce using rule 90 (expresiones -> .)
    COMA            reduce using rule 90 (expresiones -> .)
    NOT             shift and go to state 25
    RESTA           shift and go to state 26
    PI              shift and go to state 27
    POWF            shift and go to state 28
    POW             shift and go to state 29
    MATCH           shift and go to state 35
    IF              shift and go to state 36
    ID              shift and go to state 18
    ENTERO          shift and go to state 37
    FLOAT           shift and go to state 38
    CADENA          shift and go to state 39
    CARACTER        shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

  ! RESTA           [ reduce using rule 90 (expresiones -> .) ]
  ! ID              [ reduce using rule 90 (expresiones -> .) ]
  ! MATCH           [ reduce using rule 90 (expresiones -> .) ]
  ! IF              [ reduce using rule 90 (expresiones -> .) ]
  ! NOT             [ reduce using rule 90 (expresiones -> .) ]
  ! PI              [ reduce using rule 90 (expresiones -> .) ]
  ! POWF            [ reduce using rule 90 (expresiones -> .) ]
  ! POW             [ reduce using rule 90 (expresiones -> .) ]
  ! ENTERO          [ reduce using rule 90 (expresiones -> .) ]
  ! FLOAT           [ reduce using rule 90 (expresiones -> .) ]
  ! CADENA          [ reduce using rule 90 (expresiones -> .) ]
  ! CARACTER        [ reduce using rule 90 (expresiones -> .) ]
  ! TRUE            [ reduce using rule 90 (expresiones -> .) ]
  ! FALSE           [ reduce using rule 90 (expresiones -> .) ]

    expresiones                    shift and go to state 19
    funcion_nativa                 shift and go to state 20
    expre_logica                   shift and go to state 21
    expre_relacional               shift and go to state 22
    expre_aritmetica               shift and go to state 23
    expre_valor                    shift and go to state 24
    datos_cast                     shift and go to state 30
    start_match                    shift and go to state 31
    start_if                       shift and go to state 32
    llamada                        shift and go to state 33
    datos                          shift and go to state 34

state 14

    (66) declaracion -> LET mutable . ID tipado PYC
    (67) declaracion -> LET mutable . ID tipado IGUAL expresiones PYC

    ID              shift and go to state 43


state 15

    (69) mutable -> MUT .

    ID              reduce using rule 69 (mutable -> MUT .)


state 16

    (51) funcion -> FUNCION MAIN PI . PD LI lista_bloque LD

    PD              shift and go to state 44


state 17

    (52) funcion -> FUNCION ID PI . PD tipo_funcion LI lista_bloque LD
    (53) funcion -> FUNCION ID PI . parametros PD tipo_funcion LI lista_bloque LD
    (54) parametros -> . parametros COMA definiciones
    (55) parametros -> . definiciones
    (56) definiciones -> . referencias mutable ID VECTOR tipado_vector
    (57) definiciones -> . referencias mutable ID tipado
    (58) referencias -> . REFER
    (59) referencias -> .

    PD              shift and go to state 45
    REFER           shift and go to state 49
    MUT             reduce using rule 59 (referencias -> .)
    ID              reduce using rule 59 (referencias -> .)

    parametros                     shift and go to state 46
    definiciones                   shift and go to state 47
    referencias                    shift and go to state 48

state 18

    (47) llamada -> ID . PI PD
    (48) llamada -> ID . PI lista_expres PD
    (124) datos -> ID .

  ! shift/reduce conflict for PI resolved as shift
    PI              shift and go to state 50
    PUNTO           reduce using rule 124 (datos -> ID .)
    OR              reduce using rule 124 (datos -> ID .)
    AND             reduce using rule 124 (datos -> ID .)
    MAYORIGUAL      reduce using rule 124 (datos -> ID .)
    MAYOR           reduce using rule 124 (datos -> ID .)
    MENORIGUAL      reduce using rule 124 (datos -> ID .)
    MENOR           reduce using rule 124 (datos -> ID .)
    IGUALDAD        reduce using rule 124 (datos -> ID .)
    DESIGUALDAD     reduce using rule 124 (datos -> ID .)
    RESTA           reduce using rule 124 (datos -> ID .)
    SUMA            reduce using rule 124 (datos -> ID .)
    MULTI           reduce using rule 124 (datos -> ID .)
    DIVI            reduce using rule 124 (datos -> ID .)
    MODULO          reduce using rule 124 (datos -> ID .)
    FUNCION         reduce using rule 124 (datos -> ID .)
    LET             reduce using rule 124 (datos -> ID .)
    ID              reduce using rule 124 (datos -> ID .)
    $end            reduce using rule 124 (datos -> ID .)
    PYC             reduce using rule 124 (datos -> ID .)
    LD              reduce using rule 124 (datos -> ID .)
    PRINTLN         reduce using rule 124 (datos -> ID .)
    PRINT           reduce using rule 124 (datos -> ID .)
    MATCH           reduce using rule 124 (datos -> ID .)
    IF              reduce using rule 124 (datos -> ID .)
    WHILE           reduce using rule 124 (datos -> ID .)
    GBAJO           reduce using rule 124 (datos -> ID .)
    NOT             reduce using rule 124 (datos -> ID .)
    POWF            reduce using rule 124 (datos -> ID .)
    POW             reduce using rule 124 (datos -> ID .)
    ENTERO          reduce using rule 124 (datos -> ID .)
    FLOAT           reduce using rule 124 (datos -> ID .)
    CADENA          reduce using rule 124 (datos -> ID .)
    CARACTER        reduce using rule 124 (datos -> ID .)
    TRUE            reduce using rule 124 (datos -> ID .)
    FALSE           reduce using rule 124 (datos -> ID .)
    IGUAL           reduce using rule 124 (datos -> ID .)
    BARRA           reduce using rule 124 (datos -> ID .)
    COMA            reduce using rule 124 (datos -> ID .)
    PD              reduce using rule 124 (datos -> ID .)
    LI              reduce using rule 124 (datos -> ID .)
    RETURN          reduce using rule 124 (datos -> ID .)

  ! PI              [ reduce using rule 124 (datos -> ID .) ]


state 19

    (68) asignacion -> ID IGUAL expresiones .
    (95) funcion_nativa -> expresiones . PUNTO nativas
    (101) expre_logica -> expresiones . OR expresiones
    (102) expre_logica -> expresiones . AND expresiones
    (104) expre_relacional -> expresiones . MAYORIGUAL expresiones
    (105) expre_relacional -> expresiones . MAYOR expresiones
    (106) expre_relacional -> expresiones . MENORIGUAL expresiones
    (107) expre_relacional -> expresiones . MENOR expresiones
    (108) expre_relacional -> expresiones . IGUALDAD expresiones
    (109) expre_relacional -> expresiones . DESIGUALDAD expresiones
    (112) expre_aritmetica -> expresiones . RESTA expresiones
    (113) expre_aritmetica -> expresiones . SUMA expresiones
    (114) expre_aritmetica -> expresiones . MULTI expresiones
    (115) expre_aritmetica -> expresiones . DIVI expresiones
    (116) expre_aritmetica -> expresiones . MODULO expresiones

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for MAYORIGUAL resolved as shift
  ! shift/reduce conflict for MAYOR resolved as shift
  ! shift/reduce conflict for MENORIGUAL resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for IGUALDAD resolved as shift
  ! shift/reduce conflict for DESIGUALDAD resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for MULTI resolved as shift
  ! shift/reduce conflict for DIVI resolved as shift
  ! shift/reduce conflict for MODULO resolved as shift
    FUNCION         reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    LET             reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    ID              reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    $end            reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    PYC             reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    LD              reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    PRINTLN         reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    PRINT           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    MATCH           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    IF              reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    WHILE           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    GBAJO           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    NOT             reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    PI              reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    POWF            reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    POW             reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    ENTERO          reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    FLOAT           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    CADENA          reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    CARACTER        reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    TRUE            reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    FALSE           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    IGUAL           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    BARRA           reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    COMA            reduce using rule 68 (asignacion -> ID IGUAL expresiones .)
    PUNTO           shift and go to state 51
    OR              shift and go to state 52
    AND             shift and go to state 53
    MAYORIGUAL      shift and go to state 54
    MAYOR           shift and go to state 55
    MENORIGUAL      shift and go to state 56
    MENOR           shift and go to state 57
    IGUALDAD        shift and go to state 58
    DESIGUALDAD     shift and go to state 59
    RESTA           shift and go to state 60
    SUMA            shift and go to state 61
    MULTI           shift and go to state 62
    DIVI            shift and go to state 63
    MODULO          shift and go to state 64

  ! RESTA           [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! PUNTO           [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! OR              [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! AND             [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MAYORIGUAL      [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MAYOR           [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MENORIGUAL      [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MENOR           [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! IGUALDAD        [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! DESIGUALDAD     [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! SUMA            [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MULTI           [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! DIVI            [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]
  ! MODULO          [ reduce using rule 68 (asignacion -> ID IGUAL expresiones .) ]


state 20

    (85) expresiones -> funcion_nativa .
